//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Project Name" {
  database_type: 'PostgreSQL'
  Note: 'Test project description'
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  identifier String [unique, not null]
  verified Boolean [not null, default: false]
  roles Role [not null]
  administrator Administrator
  customer Customer
}

Table Role {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  code String [unique, not null]
  description String [not null]
  user User [not null]
}

Table Administrator {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String [not null]
  lastName String [not null]
  emailAddress String [unique, not null]
  user User
  userId String [unique, not null]
}

Table Customer {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String [not null]
  lastName String [not null]
  phoneNumber String
  emailAddress String [unique, not null]
  user User [not null]
  userId String [unique, not null]
}

Table RoleToUser {
  rolesId Int [ref: > Role.id]
  userId String [ref: > User.id]
}

Ref: Administrator.userId - User.id

Ref: Customer.userId - User.id